--- a/WebVisualizations/plot1.html
+++ b/WebVisualizations/plot1.html
@@ -20,10 +20,10 @@
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="WebVisualizations/plot1.html">Plot 1</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot2.html">Plot 2</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot3.html">Plot 3</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot4.html">Plot 4</a>
+                  <a class="dropdown-item" href="plot1.html">Plot 1</a>
+                  <a class="dropdown-item" href="plot2.html">Plot 2</a>
+                  <a class="dropdown-item" href="plot3.html">Plot 3</a>
+                  <a class="dropdown-item" href="plot4.html">Plot 4</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -38,7 +38,7 @@
 
 <body>
     <div>
-        <h1>Welcome to My page</h1>
+        <h1>Plot 1</h1>
 
         <h2>This is my page</h2>
 
