--- a/WebVisualizations/plot3.html
+++ b/WebVisualizations/plot3.html
@@ -20,10 +20,10 @@
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="WebVisualizations/plot1.html">Plot 1</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot2.html">Plot 2</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot3.html">Plot 3</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot4.html">Plot 4</a>
+                    <a class="dropdown-item" href="plot1.html">Plot 1</a>
+                    <a class="dropdown-item" href="plot2.html">Plot 2</a>
+                    <a class="dropdown-item" href="plot3.html">Plot 3</a>
+                    <a class="dropdown-item" href="plot4.html">Plot 4</a>
                 </div>
             </li>
             <li class="nav-item">
@@ -40,7 +40,7 @@
     <div>
         <h1>Welcome to My page</h1>
 
-        <h2>This is my page</h2>
+        <h2>This is plot 3</h2>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
