created data and comparisons pages

--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -38,9 +38,9 @@
 
 <body>
     <div>
-        <h1>Welcome to My page</h1>
+        <h1>Data</h1>
 
-        <h2>Plot 2</h2>
+        <h2>Welcome to Plot</h2>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
