--- a/WebVisualizations/plot1.html
+++ b/WebVisualizations/plot1.html
@@ -4,7 +4,7 @@
     <meta charset="UTF-8">
     <title>Latitude Analysis</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href="WebVisualizations/styles.css">
+    <link rel = "stylesheet" href="styles.css">
 </head>
 
 <nav class="phone navbar navbar-expand-sm navbar-light bg-light">
@@ -27,10 +27,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Comparison</a>
+                <a class="nav-link" href="comparisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="data.html">Data</a>
             </li>
         </ul>
     </div>
