--- a/index.html
+++ b/index.html
@@ -27,10 +27,10 @@
                 </div>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Comparison</a>
+                <a class="nav-link" href="WebVisualizations/comparisons.html">Comparison</a>
             </li>
             <li class="nav-item">
-                <a class="nav-link" href="#">Data</a>
+                <a class="nav-link" href="WebVisualizations/data.html">Data</a>
             </li>
         </ul>
     </div>
