completed landing page

--- a/index.html
+++ b/index.html
@@ -4,18 +4,18 @@
     <meta charset="UTF-8">
     <title>Latitude Analysis</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href="WebVisualizations/styles.css">
+    <link rel = "stylesheet" href="WebVisualizations/assets/styles.css">
 </head>
 
 <nav class="phone navbar navbar-expand-sm navbar-light bg-light">
-    <a class="phone navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
+    <a class="blue phone navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
     <button class="phone navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="phone navbar-toggler-icon"></span>
+      <span class="navbar-toggler-icon"></span>
     </button>
 
     <div class="phone navbar-collapse collapse" id="navbarSupportedContent" style="">
         <ul class="phone navbar-nav ml-auto">
-            <li class="phone nav-item dropdown">
+            <li class="blue phone nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Plots
                 </a>
@@ -26,10 +26,10 @@
                   <a class="dropdown-item" href="WebVisualizations/plot4.html">Plot 4</a>
                 </div>
             </li>
-            <li class="nav-item">
+            <li class="blue nav-item">
                 <a class="nav-link" href="WebVisualizations/comparisons.html">Comparison</a>
             </li>
-            <li class="nav-item">
+            <li class="blue nav-item">
                 <a class="nav-link" href="WebVisualizations/data.html">Data</a>
             </li>
         </ul>
@@ -37,11 +37,56 @@
   </nav>
 
 <body>
-    <div>
-        <h1>Welcome to My page</h1>
-
-        <h2>This is my page</h2>
-
+    <div class="jumbotron">
+        <h1 class = "text-center">Economic Production vs Environmental Destruction</h1><br>
+            <p class = "reg-font">As society faces one of the most pressing economic downturns in history,
+             many headlines have emerged touting its environmental effects. Dolphins have been 
+             seen returning to the canals in Venice, smog is disappearing over Los Angeles, 
+             and people in the Jalandhar area of India can see the Himalayas for the first 
+             time in 30 years. <br><br>This has begged us to ask the question: “What are the environmental 
+             effects of economic activity?”<br> 
+            <br>Here you find some data analysis attempting to answer this question. Sources include:
+        </p>
+    </div>
+    <div class = "jumbotron">
+        <div>
+            <h1 class ="text-center">Visualizations<Br></h1>
+        </div>
+        <div class="row">
+            <div class="col-md-3">
+              <div class="thumbnail">
+                <img src="WebVisualizations/visualizations/CO.png" alt="..." class="img-thumbnail">
+              </div>
+              <div class="caption">
+                  <a class = "reg-font text-center" href = "WebVisualizations/plot1.html">CO</h3>
+                  </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                  <img src="WebVisualizations/visualizations/NO2.png" alt="..." class="img-thumbnail">
+                </div>
+                <div class="caption">
+                    <a class = "reg-font text-center" href = "WebVisualizations/plot2.html">NO2</h3>
+                    </div>
+              </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                  <img src="WebVisualizations/visualizations/O3.png" alt="..." class="img-thumbnail">
+                </div>
+                <div class="caption">
+                    <a class = "reg-font text-center" href = "WebVisualizations/plot3.html">O3</h3>
+                    </div>
+            </div>
+            <div class="col-md-3">
+                <div class="thumbnail">
+                  <img src="WebVisualizations/visualizations/SO2.png" alt="..." class="img-thumbnail">
+                </div>
+                <div class="caption">
+                    <a class = "reg-font text-center" href = "WebVisualizations/plot4.html">SO2</h3>
+                    </div>
+              </div>
+        </div>
+        
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
