completed comparison and data pages

--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -37,12 +37,159 @@
   </nav>
 
 <body>
-    <div>
-        <h1>Data</h1>
-
-        <h2>Welcome to Plot</h2>
-
+    <div class = "jumbotron">
+        <h1>Data Source 1: Unemployment Data by State by Month</h1>
+        <table class="table table-striped">
+            <thead class = "thead-light">
+              <tr style="text-align: right;">
+                <th></th>
+                <th>Year</th>
+                <th>Month</th>
+                <th>Average of NO2 Mean</th>
+                <th>Average of O3 Mean</th>
+                <th>Average of SO2 Mean</th>
+                <th>Average of CO Mean</th>
+                <th>Unemployment</th>
+                <th>1-Month % Change</th>
+              </tr>
+            </thead>
+            <tbody>
+              <tr>
+                <th>0</th>
+                <td>2005</td>
+                <td>6.487047</td>
+                <td>15.707955</td>
+                <td>0.024888</td>
+                <td>3.139843</td>
+                <td>0.426073</td>
+                <td>5.089119</td>
+                <td>-0.473575</td>
+              </tr>
+              <tr>
+                <th>1</th>
+                <td>2006</td>
+                <td>6.468504</td>
+                <td>13.773114</td>
+                <td>0.025567</td>
+                <td>2.844463</td>
+                <td>0.376567</td>
+                <td>4.564173</td>
+                <td>-0.584252</td>
+              </tr>
+              <tr>
+                <th>2</th>
+                <td>2007</td>
+                <td>6.466667</td>
+                <td>12.507063</td>
+                <td>0.025739</td>
+                <td>2.380635</td>
+                <td>0.348483</td>
+                <td>4.337895</td>
+                <td>0.372982</td>
+              </tr>
+              <tr>
+                <th>3</th>
+                <td>2008</td>
+                <td>6.531773</td>
+                <td>11.314656</td>
+                <td>0.025464</td>
+                <td>1.871283</td>
+                <td>0.294194</td>
+                <td>5.285953</td>
+                <td>3.387960</td>
+              </tr>
+              <tr>
+                <th>4</th>
+                <td>2009</td>
+                <td>6.528428</td>
+                <td>10.015557</td>
+                <td>0.025085</td>
+                <td>1.611979</td>
+                <td>0.281375</td>
+                <td>8.462207</td>
+                <td>2.184615</td>
+              </tr>
+              <tr>
+                <th>5</th>
+                <td>2010</td>
+                <td>6.407285</td>
+                <td>10.433790</td>
+                <td>0.026983</td>
+                <td>1.427156</td>
+                <td>0.294650</td>
+                <td>8.786424</td>
+                <td>-0.439073</td>
+              </tr>
+              <tr>
+                <th>6</th>
+                <td>2011</td>
+                <td>6.477041</td>
+                <td>11.178029</td>
+                <td>0.026745</td>
+                <td>1.212832</td>
+                <td>0.282825</td>
+                <td>8.062755</td>
+                <td>-0.711224</td>
+              </tr>
+              <tr>
+                <th>7</th>
+                <td>2012</td>
+                <td>6.543590</td>
+                <td>10.516482</td>
+                <td>0.027545</td>
+                <td>0.933885</td>
+                <td>0.284704</td>
+                <td>7.390256</td>
+                <td>-0.650769</td>
+              </tr>
+              <tr>
+                <th>8</th>
+                <td>2013</td>
+                <td>6.522727</td>
+                <td>10.160166</td>
+                <td>0.026451</td>
+                <td>0.899359</td>
+                <td>0.260476</td>
+                <td>6.860606</td>
+                <td>-1.056818</td>
+              </tr>
+              <tr>
+                <th>9</th>
+                <td>2014</td>
+                <td>6.617849</td>
+                <td>9.736403</td>
+                <td>0.025954</td>
+                <td>0.972904</td>
+                <td>0.256573</td>
+                <td>5.781465</td>
+                <td>-1.389474</td>
+              </tr>
+              <tr>
+                <th>10</th>
+                <td>2015</td>
+                <td>6.576271</td>
+                <td>9.299371</td>
+                <td>0.025668</td>
+                <td>0.887115</td>
+                <td>0.267777</td>
+                <td>5.021610</td>
+                <td>-0.898305</td>
+              </tr>
+              <tr>
+                <th>11</th>
+                <td>2016</td>
+                <td>2.339450</td>
+                <td>10.368219</td>
+                <td>0.026645</td>
+                <td>0.636204</td>
+                <td>0.272439</td>
+                <td>4.806422</td>
+                <td>-0.305505</td>
+              </tr>
+            </tbody>
+        </table>
     </div>
+
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
     <script src="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/js/bootstrap.min.js" integrity="sha384-JjSmVgyd0p3pXB1rRibZUAYoIIy6OrQ6VrjIEaFf/nJGzIxFDsf4x0xIM+B07jRM" crossorigin="anonymous"></script>
