--- a/index.html
+++ b/index.html
@@ -53,38 +53,47 @@
             <h1 class ="text-center">Visualizations<Br></h1>
         </div>
         <div class="row">
-            <div class="col-md-3">
-              <div class="thumbnail">
-                <img src="WebVisualizations/visualizations/CO.png" alt="..." class="img-thumbnail">
-              </div>
-              <div class="caption">
-                  <a class = "reg-font text-center" href = "WebVisualizations/plot1.html">CO</h3>
-                  </div>
+            <div class="col-md-6">
+                <a href = "WebVisualizations/plot1.html">
+                    <div class="thumbnail">
+                        <img src="WebVisualizations/visualizations/CO.png" alt="..." class="img-thumbnail">
+                    </div>
+                    <div class="text-center caption">
+                        <span class = "reg-link">CO and Unemployment</span>
+                    </div>
+                </a>
             </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                  <img src="WebVisualizations/visualizations/NO2.png" alt="..." class="img-thumbnail">
-                </div>
-                <div class="caption">
-                    <a class = "reg-font text-center" href = "WebVisualizations/plot2.html">NO2</h3>
+            <div class="col-md-6">
+                <a href = "WebVisualizations/plot2.html">
+                    <div class="thumbnail">
+                        <img src="WebVisualizations/visualizations/NO2.png" alt="..." class="img-thumbnail">
                     </div>
-              </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                  <img src="WebVisualizations/visualizations/O3.png" alt="..." class="img-thumbnail">
-                </div>
-                <div class="caption">
-                    <a class = "reg-font text-center" href = "WebVisualizations/plot3.html">O3</h3>
+                    <div class="text-center caption">
+                        <span class = "reg-link">NO2 and Unemployment</span>
                     </div>
+                </a>
+             </div>
+        </div>
+        <div class = "row">
+            <div class="col-md-6">
+                <a href = "WebVisualizations/plot3.html">
+                    <div class="thumbnail">
+                        <img src="WebVisualizations/visualizations/O3.png" alt="..." class="img-thumbnail">
+                    </div>
+                    <div class="text-center caption">
+                        <span class = "reg-link">O3 and Unemployment</span>
+                    </div>
+                </a>
             </div>
-            <div class="col-md-3">
-                <div class="thumbnail">
-                  <img src="WebVisualizations/visualizations/SO2.png" alt="..." class="img-thumbnail">
-                </div>
-                <div class="caption">
-                    <a class = "reg-font text-center" href = "WebVisualizations/plot4.html">SO2</h3>
+            <div class="col-md-6">
+                <a href = "WebVisualizations/plot4.html">
+                    <div class="thumbnail">
+                        <img src="WebVisualizations/visualizations/SO2.png" alt="..." class="img-thumbnail">
                     </div>
-              </div>
+                    <div class="text-center caption">
+                        <span class = "reg-link">SO2 and Unemployment</span>
+                    </div>
+                </a>
         </div>
         
     </div>
