--- a/WebVisualizations/plot1.html
+++ b/WebVisualizations/plot1.html
@@ -37,10 +37,19 @@
   </nav>
 
 <body>
-    <div>
-        <h1>Plot 1</h1>
+    <div class  = "jumbotron">
+        <h1 class = "text-center">CO2 and Unemployment from 2005 to 2017</h1>
+        <div class="col-md-12">
+                <div class="img-responsive">
+                    <img src="visualizations/CO.png" alt="..." class="img-thumbnail">
+                </div>
+        </div>
 
-        <h2>This is my page</h2>
+        <p class = "reg-font">
+            The figure shown above plots the percentage of Unemployment in the US, alongside Carbon Monoxide captured in the atmosphere. 
+            We can see that the release of CO has been decreasing steadily over time, but during the peak of Unemployment (2009), it decreases at a much faster rate.
+             
+        </p>
 
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
