completed plot pages

--- a/WebVisualizations/comparisons.html
+++ b/WebVisualizations/comparisons.html
@@ -4,32 +4,32 @@
     <meta charset="UTF-8">
     <title>Latitude Analysis</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
-    <link rel = "stylesheet" href="styles.css">
+    <link rel = "stylesheet" href="assets/styles.css">
 </head>
 
-<nav class="phone navbar navbar-expand-sm navbar-light bg-light">
-    <a class="phone navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
-    <button class="phone navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
-      <span class="phone navbar-toggler-icon"></span>
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+      <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="phone navbar-collapse collapse" id="navbarSupportedContent" style="">
-        <ul class="phone navbar-nav ml-auto">
-            <li class="phone nav-item dropdown">
+    <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+        <ul class="navbar-nav ml-auto">
+            <li class="blue nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                    <a class="dropdown-item" href="plot1.html">Plot 1</a>
-                    <a class="dropdown-item" href="plot2.html">Plot 2</a>
-                    <a class="dropdown-item" href="plot3.html">Plot 3</a>
-                    <a class="dropdown-item" href="plot4.html">Plot 4</a>
+                  <a class="dropdown-item" href="plot1.html">CO and Unemployment</a>
+                  <a class="dropdown-item" href="plot2.html">NO2 and Unemployment</a>
+                  <a class="dropdown-item" href="plot3.html">O3 and Unemployment</a>
+                  <a class="dropdown-item" href="plot4.html">SO2 and Unemployment</a>
                 </div>
             </li>
-            <li class="nav-item">
+            <li class="blue nav-item">
                 <a class="nav-link" href="comparisons.html">Comparison</a>
             </li>
-            <li class="nav-item">
+            <li class="blue nav-item">
                 <a class="nav-link" href="data.html">Data</a>
             </li>
         </ul>
@@ -37,7 +37,7 @@
   </nav>
 
 <body>
-    <<div class = "jumbotron">
+    <div class = "jumbotron">
         <div>
             <h1 class ="text-center">Compare Plots<Br></h1>
         </div>
