--- a/index.html
+++ b/index.html
@@ -7,23 +7,23 @@
     <link rel = "stylesheet" href="WebVisualizations/assets/styles.css">
 </head>
 
-<nav class="phone navbar navbar-expand-sm navbar-light bg-light">
-    <a class="blue phone navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
-    <button class="phone navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+<nav class="navbar navbar-expand-sm navbar-light bg-light">
+    <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
+    <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
 
-    <div class="phone navbar-collapse collapse" id="navbarSupportedContent" style="">
-        <ul class="phone navbar-nav ml-auto">
-            <li class="blue phone nav-item dropdown">
+    <div class="navbar-collapse collapse" id="navbarSupportedContent" style="">
+        <ul class="navbar-nav ml-auto">
+            <li class="blue nav-item dropdown">
                 <a class="nav-link dropdown-toggle" href="#" id="navbarDropdown" role="button" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
                   Plots
                 </a>
                 <div class="dropdown-menu" aria-labelledby="navbarDropdown">
-                  <a class="dropdown-item" href="WebVisualizations/plot1.html">Plot 1</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot2.html">Plot 2</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot3.html">Plot 3</a>
-                  <a class="dropdown-item" href="WebVisualizations/plot4.html">Plot 4</a>
+                  <a class="dropdown-item" href="WebVisualizations/plot1.html">CO and Unemployment</a>
+                  <a class="dropdown-item" href="WebVisualizations/plot2.html">NO2 and Unemployment</a>
+                  <a class="dropdown-item" href="WebVisualizations/plot3.html">O3 and Unemployment</a>
+                  <a class="dropdown-item" href="WebVisualizations/plot4.html">SO2 and Unemployment</a>
                 </div>
             </li>
             <li class="blue nav-item">
@@ -45,7 +45,8 @@
              and people in the Jalandhar area of India can see the Himalayas for the first 
              time in 30 years. <br><br>This has begged us to ask the question: “What are the environmental 
              effects of economic activity?”<br> 
-            <br>Here you find some data analysis attempting to answer this question. Sources include:
+            <br>Here you find some data analysis attempting to answer this question. Sources include unemployment data from
+            the U.S. Bureau of Labor Statistics, and US air pollution data from the EPA.
         </p>
     </div>
     <div class = "jumbotron">
@@ -94,8 +95,8 @@
                         <span class = "reg-link">SO2 and Unemployment</span>
                     </div>
                 </a>
+             </div>
         </div>
-        
     </div>
     <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
