--- a/index.html
+++ b/index.html
@@ -2,13 +2,13 @@
 <html lang = "en-us">
 <head>
     <meta charset="UTF-8">
-    <title>Latitude Analysis</title>
+    <title>Pollution & Unemployment</title>
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
     <link rel = "stylesheet" href="WebVisualizations/assets/styles.css">
 </head>
 
 <nav class="navbar navbar-expand-sm navbar-light bg-light">
-    <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Lattitudes</a>
+    <a class="blue navbar-brand" href="https://lisaashway.github.io/Web-Design-Challenge/">Pollution & Unemployment</a>
     <button class="navbar-toggler collapsed" type="button" data-toggle="collapse" data-target="#navbarSupportedContent" aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
       <span class="navbar-toggler-icon"></span>
     </button>
