fixed data title

--- a/WebVisualizations/data.html
+++ b/WebVisualizations/data.html
@@ -38,7 +38,8 @@
 
 <body>
     <div class = "jumbotron">
-        <h1>Data Source 1: Unemployment Data by State by Month</h1>
+        <h1>Data Source for Plots</h1>
+        <p class = "reg-font"> Data from EPA and U.S. Bureau of Labor Statistics was combined and cleaned into this table</p>
         <table class="table table-striped">
             <thead class = "thead-light">
               <tr style="text-align: right;">
