--- a/index.html
+++ b/index.html
@@ -38,7 +38,7 @@
 
 <body>
     <div class="jumbotron">
-        <h1 class = "text-center">Economic Production vs Environmental Destruction</h1><br>
+        <h1 class = "header text-center">Economic Production vs Environmental Destruction</h1><br>
             <p class = "reg-font">As society faces one of the most pressing economic downturns in history,
              many headlines have emerged touting its environmental effects. Dolphins have been 
              seen returning to the canals in Venice, smog is disappearing over Los Angeles, 
@@ -51,7 +51,7 @@
     </div>
     <div class = "jumbotron">
         <div>
-            <h1 class ="text-center">Visualizations<Br></h1>
+            <h1 class ="header text-center">Visualizations<Br></h1>
         </div>
         <div class="row">
             <div class="col-md-6">
